samples/_failures_safe/1761322205_f08dbc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cf918c62.c: In function ‘token_type_name’:
./samples/SAFE/__tmp_cf918c62.c:176:9: error: expected declaration or statement at end of input
  176 |         case TOKEN_STRING:
      |         ^~~~
./samples/SAFE/__tmp_cf918c62.c:176:9: error: expected declaration or statement at end of input
